# Otus.Cpp.HW2

./: .travis.yml  CMakeLists.txt  README.md  lib.cpp  lib.h  test_main.cpp
